# barge

./: Cargo.toml
barge/: Cargo.toml
barge/src/: barge.rs  lib.rs  message.fbs  message_generated.rs  store.rs
examples/: cli.rs  warp.rs
examples/cli/: Cargo.toml
examples/cli/src/: main.rs
examples/rest/: Cargo.toml
examples/rest/src/: main.rs
src/: lib.rs  message_generated.rs
